test_suite/tests/ui/conflict/internal-tag-alias.stderr
error: variant field name `conflict` conflicts with internal tag
  --> tests/ui/conflict/internal-tag-alias.rs:4:1
   |
 4 | / #[serde(tag = "conflict")]
 5 | | enum E {
 6 | |     A {
 7 | |         #[serde(alias = "conflict")]
 8 | |         x: (),
 9 | |     },
10 | | }
   | |_^
